test updates + code smell fix